--- a/cloudformation/Prowler-Template.yaml
+++ b/cloudformation/Prowler-Template.yaml
@@ -76,6 +76,11 @@ Parameters:
     Type: String
     Default: "NONE"
 
+  pFindingAlertSlackSecret:
+    Description: FullName of secret that has a SLACK_API_TOKEN and SLACK_CHANNEL_ID to send high-value new alerts to Slack
+    Type: String
+    Default: "NONE"
+
   pAlertTopicArn:
     Description: Topic To send Alarm Actions to
     Type: String
@@ -131,7 +136,7 @@ Parameters:
 Conditions:
   cSlackSecret: !Not [!Equals [ !Ref pSlackSecret, "NONE" ]]
   cDeployIngestLambda: !Not [!Equals [ !Ref pDomainEndpoint, "NONE" ]]
-  cDeployAlertLambda: !Not [!Equals [ !Ref pSlackSecret, "NONE" ]]
+  cDeployAlertLambda: !Not [!Equals [ !Ref pFindingAlertSlackSecret, "NONE" ]]
   cAlarmActions: !Not [!Equals [ !Ref pAlertTopicArn, "NONE" ]]
 
 Globals:
@@ -723,7 +728,7 @@ Resources:
               - ssm:GetParameters
               - secretsmanager:GetSecretValue
               - kms:Decrypt
-            Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${pSlackSecret}*"
+            Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${pFindingAlertSlackSecret}*"
       - PolicyName: S3ConfigFileAccess
         PolicyDocument:
           Version: '2012-10-17'
@@ -746,7 +751,7 @@ Resources:
       Timeout: 60
       Environment:
         Variables:
-          SLACK_SECRET: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${pSlackSecret}"
+          SLACK_SECRET: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${pFindingAlertSlackSecret}"
           CONFIG_BUCKET: !Ref ProwlerBucket
       Layers:
         - arn:aws:lambda:us-east-1:177933569100:layer:AWS-Parameters-and-Secrets-Lambda-Extension:11
