--- a/cloudformation/ProwlerGCP-Template.yaml
+++ b/cloudformation/ProwlerGCP-Template.yaml
@@ -48,7 +48,7 @@ Parameters:
     Description: Name of LogGroup where Prowler Container will write logs
     Default: prowler-gcp
 
-  pSlackSecret:
+  pProwlerSlackSecret:
     Description: FullName of secret that has a SLACK_API_TOKEN and SLACK_CHANNEL_ID to push updates to slack. See https://docs.prowler.cloud/en/latest/tutorials/integrations/
     Type: String
     Default: "NONE"
@@ -110,7 +110,7 @@ Parameters:
 
 
 Conditions:
-  cSlackSecret: !Not [!Equals [ !Ref pSlackSecret, "NONE" ]]
+  cProwlerSlackSecret: !Not [!Equals [ !Ref pProwlerSlackSecret, "NONE" ]]
   cAlarmActions: !Not [!Equals [ !Ref pAlertTopicArn, "NONE" ]]
 
 
@@ -146,12 +146,12 @@ Resources:
                 awslogs-stream-prefix: !Sub "${pServiceName}-${pImageVersion}"
           Secrets:
             !If
-            - cSlackSecret
+            - cProwlerSlackSecret
             -
               - Name: SLACK_API_TOKEN
-                ValueFrom: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${pSlackSecret}:SLACK_API_TOKEN::"
+                ValueFrom: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${pProwlerSlackSecret}:SLACK_API_TOKEN::"
               - Name: SLACK_CHANNEL_ID
-                ValueFrom: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${pSlackSecret}:SLACK_CHANNEL_ID::"
+                ValueFrom: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${pProwlerSlackSecret}:SLACK_CHANNEL_ID::"
             - !Ref AWS::NoValue
           Environment:
             - Name: GCP_CREDS
