--- a/cloudformation/Prowler-Template.yaml
+++ b/cloudformation/Prowler-Template.yaml
@@ -122,7 +122,6 @@ Parameters:
 
 Conditions:
   cProwlerSlackSecret: !Not [!Equals [ !Ref pProwlerSlackSecret, "NONE" ]]
-  cDeployIngestLambda: !Not [!Equals [ !Ref pDomainEndpoint, "NONE" ]]
   cDeployAlertLambda: !Not [!Equals [ !Ref pFindingAlertSlackSecret, "NONE" ]]
   cAlarmActions: !Not [!Equals [ !Ref pAlertTopicArn, "NONE" ]]
 
@@ -603,7 +602,8 @@ Resources:
               - ssm:GetParameters
               - secretsmanager:GetSecretValue
               - kms:Decrypt
-            Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${pFindingAlertSlackSecret}*"
+            Resource:
+              - !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${pFindingAlertSlackSecret}-*"
       - PolicyName: S3ConfigFileAccess
         PolicyDocument:
           Version: '2012-10-17'
@@ -626,7 +626,7 @@ Resources:
       Timeout: 60
       Environment:
         Variables:
-          SLACK_SECRET: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${pFindingAlertSlackSecret}"
+          SLACK_SECRET: !Ref pFindingAlertSlackSecret
           CONFIG_BUCKET: !Ref ProwlerBucket
 
   DynamoDBStreamToFindingsAlertLambda:
