Export lambda role for OpenSearch perms

--- a/cloudformation/OpenSearch-Template.yaml
+++ b/cloudformation/OpenSearch-Template.yaml
@@ -660,6 +660,7 @@ Outputs:
   AdminLoginCredentials:
     Value: !Ref OpenSearchAdminCredentials
 
-
+  LambdaRoleArn:
+    Value: !GetAtt LambdaRole.Arn
 
 # EOF
