Grant Function use of DDB KMS Key

--- a/cloudformation/Prowler-Template.yaml
+++ b/cloudformation/Prowler-Template.yaml
@@ -537,6 +537,12 @@ Resources:
             - dynamodb:BatchWriteItem
             - dynamodb:UpdateItem
             Effect: Allow
+          - Resource:
+            - !GetAtt ProwlerFindingsTrackingTableKey.Arn
+            Action:
+            - kms:*
+            Effect: Allow
+
 
   DecorateFindingsFunction:
     Type: AWS::Serverless::Function
