--- a/cloudformation/Scorecards-Template.yaml
+++ b/cloudformation/Scorecards-Template.yaml
@@ -48,7 +48,7 @@ Parameters:
     Default: None
 
   pLambdaSize:
-    Description: Memory/CPU Size of the Ingestion Lambda
+    Description: Memory/CPU Size of the Lambda
     Type: String
     Default: 2048
 
@@ -257,55 +257,6 @@ Resources:
       Endpoint: !GetAtt ProwlerEventQueue.Arn
       Protocol: sqs
       TopicArn: !Ref pProwlerBucketGCPEventTopicArn
-
-  #
-  # Security Hub Scorecard
-  #
-  ProcessSecHubFindingsFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      FunctionName: !Sub "${AWS::StackName}-sechub-scorecard"
-      Description: Process Security Hub Findings to Google Sheet
-      Handler: sechub_scorecard.handler
-      Role: !GetAtt LambdaRole.Arn
-      CodeUri: ../gsheet-lambda
-      # ReservedConcurrentExecutions: 10
-      Timeout: 900
-      Events:
-        InspectorEventBridge:
-            Type: EventBridgeRule
-            Properties:
-              Pattern:
-                source:
-                  - aws.securityhub
-              State: ENABLED
-
-  ProcessSecHubFindingsFunctionErrorAlarm:
-    Type: AWS::CloudWatch::Alarm
-    Properties:
-      AlarmName: !Sub ${ProcessSecHubFindingsFunction}-LambdaErrors
-      AlarmDescription: "Alarm if lambda errors out"
-      Namespace: "AWS/Lambda"
-      MetricName: "Errors"
-      Dimensions:
-      - Name: "FunctionName"
-        Value: !Ref ProcessSecHubFindingsFunction
-      Statistic: "Sum"
-      ComparisonOperator: "GreaterThanThreshold"
-      Threshold: 0
-      EvaluationPeriods: 1
-      Period: 60
-      TreatMissingData: "ignore"
-      AlarmActions:
-        - !If
-          - cAlarmActions
-          - !Ref pAlertTopicArn
-          - !Ref AWS::NoValue
-      OKActions:
-        - !If
-          - cAlarmActions
-          - !Ref pAlertTopicArn
-          - !Ref AWS::NoValue
 
 Outputs:
   TemplateURL:
